UI fix on window rescaling on horizontal axis. Set fixed min-width to prevent "squishing" or "overlapping".

--- a/client/src/Components/createFavour/CreateFavour.css
+++ b/client/src/Components/createFavour/CreateFavour.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 80px;
-  min-width: 30vw;
+  min-width: 300px;
   max-width: 45vw;
   min-height: 500px;
   max-height: 80vh;
