--- a/client/src/Components/favoursList/FavoursList.css
+++ b/client/src/Components/favoursList/FavoursList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    min-width: fit-content;
+    min-width: 600px;
     max-width: 70%;
     height: calc(100vh - 85px);
 }
